# unidis

./: Cargo.toml  Dockerfile
.github/workflows/: unidis.yml
libunidis/: Cargo.toml
libunidis/.cargo/: config.toml
libunidis/data/: hexagon.sla
libunidis/data/Hexagon/data/: sleighArgs.txt
libunidis/data/Hexagon/data/languages/: alu32_alu.sinc  alu32_perm.sinc  alu32_pred.sinc  cr.sinc  duplex.sinc  hexagon.cspec  hexagon.ldefs  hexagon.sla  hexagon.slaspec  hvx.sinc  j.sinc  ld_byte.sinc  ld_dword.sinc  ld_halfword.sinc  ld_uhalfword.sinc  ld_unsigned_byte.sinc  ld_word.sinc  nv.sinc  nv_byte.sinc  nv_hw.sinc  nv_word.sinc  skel.sla  st_byte.sinc  st_dword.sinc  st_halfword.sinc  st_word.sinc  system_monitor.sinc  xtype_alu.sinc  xtype_bit.sinc  xtype_fp.sinc  xtype_mpy.sinc  xtype_perm.sinc  xtype_pred.sinc  xtype_shift.sinc
libunidis/data/Hexagon/data/patterns/: hexagon_patterns.xml
libunidis/src/: arch.rs  cspec.rs  dyn_arch.rs  lib.rs  opinion.rs  tmp.rs
undis/: Cargo.toml
undis/src/: main.rs
unidis/: Cargo.toml
unidis-web/: Cargo.toml
unidis-web/src/: index.rs  main.rs
unidis-web/templates/: base_template.html  index.html
unidis/src/: main.rs
