[package]
name = "unidis-web"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "=1.0.228", features = ["derive"]}
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
tracing = "=0.1.44"
anyhow = "=1.0.102"
actix-web = "=4.13.0"
askama = "=0.16.0"
dotenv = "=0.15.0"
hex = "=0.4.3"
libunidis = { path = "../libunidis" }
keystone-engine = { version = "=0.1.0", features = ["build-from-src"] }